<resources>
    <string name="app_name">SC2 Build Player</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate this App</string>
    <string name="menu_play_build">Play Build</string>
    <string name="menu_new_build">New Build</string>
    <string name="menu_edit_build">Edit</string>
    <string name="menu_delete_build">Delete</string>
    <string name="menu_move_item_up">Move up</string>
    <string name="menu_move_item_down">Move down</string>
    <string name="menu_delete_item">Delete</string>
    <string name="menu_export_build">Export</string>
    <string name="menu_import_build">Import Build&#8230;</string>
...
	<string name="pref_show_status_bar_summary">Requires restart to take effect</string>
	<string name="pref_translate_title">Translate</string>
	<string name="pref_translate_summary">Help translate text in this app to your language</string>
	<string name="pref_show_ads_title">Advertisements</string>
	<string name="pref_show_ads_summary">Support development of the app by displaying ad banners</string>
	<string name="numberpicker_units_label">in-game seconds</string>
	<string name="race_terran">Terran</string>
	<string name="race_protoss">Protoss</string>
	<string name="race_zerg">Zerg</string>
	<string name="race_any">Any</string>
	<string name="expansion_wol">Wings of Liberty</string>
	<string name="expansion_hots">Heart of the Swarm</string>
	<string name="expansion_lotv">Legacy of the Void</string>
	<string name="error_loading_std_builds">Error loading standard builds: %1$s</string>
	<string name="dlg_tts_install_prompt">Text-to-Speech support not found. Install it now?</string>
	<string name="dlg_yes">Yes</string>
	<string name="dlg_no">No</string>
	<string name="dlg_no_market_error">Error: Couldn\'t launch Play Store</string>
	<string name="dlg_game_speed_alert">Game Speed: %1$s</string>
...
	<string name="brief_source_label">Source:</string>
	<string name="brief_author_label">Author:</string>

	<!-- Build editor -->
	<string name="edit_build_new_title">New Build</string>
	<string name="edit_build_edit_title">Edit Build</string>
	<string name="edit_build_info_title">Info</string>
	<string name="edit_build_notes_title">Notes</string>
	<string name="edit_build_items_title">Items</string>
	<string name="edit_build_vs">Vs.</string>
	<string name="edit_build_title_hint">Title</string>
	<string name="edit_build_author_hint">Author</string>
	<string name="edit_build_source_url_hint">Source URL (http:// &#8230;)</string>
	<string name="edit_build_source_title_hint">Source Title (e.g. "Liquipedia")</string>
	<string name="edit_build_notes_hint">Notes (accepts HTML tags)</string>
...
	<string name="gameitem_medivac">Medivac</string>
	<string name="gameitem_missile_turret">Missile Turret</string>
	<string name="gameitem_mule">Call Down MULE</string>
	<string name="gameitem_orbital_command">Orbital Command</string>
	<string name="gameitem_planetary_fortress">Planetary Fortress</string>
	<string name="gameitem_raven">Raven</string>
	<string name="gameitem_reactor">Reactor</string>
	<string name="gameitem_reaper">Reaper</string>
	<string name="gameitem_refinery">Refinery</string>
	<string name="gameitem_scv">SCV</string>
	<string name="gameitem_seeker_missile">Seeker Missile</string>
	<string name="gameitem_sensor_tower">Sensor Tower</string>
	<string name="gameitem_siege_mode">Siege Mode</string>
...
